--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="src/assets/popcorn.png"
+      sizes="32x32"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Popcorn Alpha</title>
   </head>
