feat: Refatoração no Layout principal

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Popcorn Alpha</title>
+    <title>Popcorn Club</title>
   </head>
   <body>
     <div id="root"></div>
